--- a/src/components/GameImage/GameImage.module.css
+++ b/src/components/GameImage/GameImage.module.css
@@ -1,13 +1,27 @@
 /* GameImage.module.css */
 
-.gamePhoto {
+.imageWrapper {
   position: relative;
-  background-image: url('src/assets/library.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
   width: 100vw;
-  min-height: 900px;
+  display: flex;
+  justify-content: center;
+}
+
+.imageWrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: contain;
+  user-select: none;
+  pointer-events: none; /* important so clicks pass through */
+}
+
+.gamePhoto {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .circleWrapper {
