--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,7 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap');
 
 nav {
+  position: sticky;
+  top: 0;
   height: 100px;
+  background-color: white;
+  z-index: 100;
 }
 
 .grayscale {
