--- a/src/components/GameImage/GameImage.module.css
+++ b/src/components/GameImage/GameImage.module.css
@@ -29,3 +29,7 @@
   transform: translate(-50%, -50%); /* center on click */
   pointer-events: none; /* so clicks pass through */
 }
+
+.loading {
+  height: 80vh;
+}
