--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,10 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap');
 
-nav {
+.navigation {
   position: sticky;
   top: 0;
-  height: 100px;
+  height: 120px;
   background-color: white;
   z-index: 100;
 }
@@ -22,6 +22,7 @@ nav {
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0 50px;
 }
 
