--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -25,19 +25,79 @@
 }
 
 .articleContainer {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #213547;
   color: white;
   padding: 2rem;
   border-radius: 12px;
+  height: 55vh;
   max-width: 400px;
   width: 90%;
   text-align: center;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 
-  transform: translateY(-20px);
-  transition: transform 0.5s ease;
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 
 .overlay.show .articleContainer {
-  transform: translateY(0);
+  opacity: 1;
+}
+
+/* Winner centered and ABOVE normal content */
+.winner {
+  position: absolute;
+  top: 27%;
+  left: 27%;
+  animation: winner 3s ease-in-out forwards;
+}
+
+@keyframes winner {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.6;
+  }
+  40% {
+    transform: scale(1.4);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+/* Leaderboard hidden and not taking space initially */
+.leaderboard {
+  opacity: 0;
+  pointer-events: none;
+  animation: leaderboardFade 5s forwards;
+}
+
+@keyframes leaderboardFade {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    pointer-events: auto;
+  }
+}
+
+li {
+  font-size: 1.35rem;
 }
