--- a/src/components/ChooseImage/ChooseImage.module.css
+++ b/src/components/ChooseImage/ChooseImage.module.css
@@ -5,11 +5,23 @@
   display: flex;
   flex-direction: column;
   width: 230px;
-  height: 360px;
+  height: 340px;
   border: 2px solid green;
   border-radius: 15px;
   background-color: white;
   transition: opacity 600ms ease-out;
+}
+
+.cancel {
+  margin: 7px auto;
+  width: 80%;
+  background-color: none;
+  border: 1px solid green;
+}
+
+.cancel:hover {
+  background-color: #00800020;
+  border: 1px solid green;
 }
 
 .fadeout {
